k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tedu
  labels:
    name: tedu
    project: tedu-microservices
