k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tedu-ingress
  namespace: tedu
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://tedu.local"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: tedu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: api.tedu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigw-ocelot
                port:
                  number: 80
    - host: idp.tedu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tedu-identity-api
                port:
                  number: 80
    - host: kibana.tedu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
    - host: rabbitmq.tedu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
    - host: health.tedu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webstatus
                port:
                  number: 80
    - host: jobs.tedu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hangfire-api
                port:
                  number: 80
